# EraBackendV2

./: .env  Cargo.toml  Procfile
resources/: cosmetics.json  fortnite-game.json  keychain.json  register.html
src/: main.rs
src/app/: account.rs  cloudstorage.rs  content.rs  fortnite.rs  launcher.rs  lightswitch.rs  mcp.rs  mod.rs  other.rs
src/db/: mod.rs
src/models/: app.rs  athena.rs  captcha.rs  cloudstorage.rs  cloudstoragefile.rs  error.rs  errors.rs  files.rs  launcher.rs  mod.rs  user.rs
src/models/db/: athena.rs  cloudstoragefile.rs  mod.rs  user.rs
src/models/fortnite/: account.rs  cloudstorage.rs  mod.rs
src/models/mcp/: athena.rs  common_core.rs  common_public.rs  mod.rs  profile0.rs
src/utils/: mod.rs
