[package]
name = "era-backend-v2"
version = "2.0.0-BETA"
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.10"
base64 = "0.13.0"
bcrypt = "0.10.1"
bson = { version = "2", features = ["chrono-0_4", "uuid-0_8"] }
derive_more = "0.99.16"
chrono = "0.4"
dotenv = "0.15.0"
mongodb = "2"
hcaptcha = "2"
log = "0.4"
pretty_env_logger = "0.4"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.9.6"
sha2 = "0.9.5"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }